I add the reset funtion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
      <button id="manu-1" class="bu">About</button>
      <button id="manu-2" class="bu">Theam</button>
-     <button id="manu-3" class="bu">Me</button>
+     <button id="manu-3" class="bu">Reset</button>
      <button id="main-manu" class="bu">Manu</button>
 
      <div class="second-main" style="top:19vh;">
